tests/baselines/reference/moduleUnassignedVariable(strict=true).errors.txt
moduleUnassignedVariable.ts(5,16): error TS7005: Variable 'b' implicitly has an 'any' type.


==== moduleUnassignedVariable.ts (1 errors) ====
    module Bar {
        export var a = 1;
        function fooA() { return a; } // Correct: return Bar.a
    
        export var b;
                   ~
!!! error TS7005: Variable 'b' implicitly has an 'any' type.
        function fooB() { return b; } // Incorrect: return b
    }
    